--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -10,6 +10,7 @@
       "app/modules/flags.js",
       "app/modules/flyer.js",
       "app/modules/requirements.js",
+      "app/modules/requirements.show.js",
       "app/modules/success.js",
       "app/services/dataService.js",
       "app/services/directives.js",
