--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app/app.js",
   "scripts": {
     "lint": "eslint app/ --ignore-pattern scripts*.js",
-    "bundleJs": "uglifyjs app/app.js app/layout/*.js app/modules/*.js app/services/*.js --output app/scripts.js -b",
-    "postbundleJs": "uglifyjs app/scripts.js --output app/scripts.min.js --source-map app/scripts.min.js.map --mangle --compress",
+    "bundleJs": "uglifyjs app/app.js app/layout/*.js app/modules/*.js app/services/*.js -o app/scripts.js -b",
+    "postbundleJs": "uglifyjs app/scripts.js -o app/scripts.min.js --source-map -o app/scripts.min.js.map --mangle --compress",
     "compileCss": "node-sass app/styles.scss app/styles.min.css --source-map true --output-style compressed",
     "build": "npm run lint && npm run bundleJs && npm run compileCss"
   },
@@ -22,8 +22,8 @@
   "author": "Sean Wilson <sean.m.wilson@intel.com>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "node-sass": "^4.5.2",
-    "uglify-js": "^2.8.22"
+    "eslint": "^4.13.1",
+    "node-sass": "^4.7.2",
+    "uglify-js": "^3.2.2"
   }
 }
