--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint app/ --ignore-pattern scripts*.js",
     "bundleJs": "uglifyjs app/app.js app/layout/*.js app/modules/*.js app/services/*.js -o app/scripts.js -b",
-    "postbundleJs": "uglifyjs app/scripts.js -o app/scripts.min.js --source-map -o app/scripts.min.js.map --mangle --compress",
+    "postbundleJs": "uglifyjs app/scripts.js -o app/scripts.min.js --source-map -o app/scripts.min.js --mangle --compress",
     "compileCss": "node-sass app/styles.scss app/styles.min.css --source-map true --output-style compressed",
     "build": "npm run lint && npm run bundleJs && npm run compileCss"
   },
