--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     },
     "rules": {
         "no-unused-vars": ["off"],
-        "no-console": [0]
+				"no-console": [0],
+				"no-redeclare": "off"
     }
 }
